--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 3000
-CONNECTION_STRING = "mongodb+srv://admin:admin@rahulcluster.df887.mongodb.net/mycontacts-backend?retryWrites=true&w=majority&appName=rahulCluster"
+CONNECTION_STRING = "mongodb://localhost:27017/"
 ACCESS_TOKEN_SECRET = rahul123
